--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Талан - Юридическая компания</title>
-        <link rel="stylesheet" href="styles/css/index.css">
-        <link rel="stylesheet" href="media/icon-font/style.css">
+		<link rel="stylesheet" href="styles/css/index.css" />
+		<link rel="stylesheet" href="media/icon-font/style.css" />
 	</head>
 	<body>
 		<header class="header">
@@ -18,99 +18,218 @@
 						</g>
 					</svg>
 				</a>
-                <nav class="header__nav">
-                    <ul class="header__nav-container">
-                        <li class="header__nav-item" data-hover-text="О компании"><a href="./pages/">о Компании</a></li>
-                        <li class="header__nav-item header__nav-item--menu" data-hover-text="Услуги"><button data-services-open>Услуги</button><i class="header__nav-item--icon icon-check-mark"></i></li>
-                        <li class="header__nav-item" data-hover-text="Новости"><a href="./pages/">Новости</a></li>
-                        <li class="header__nav-item" data-hover-text="Кейсы"><a href="./pages/">Кейсы</a></li>
-                        <li class="header__nav-item" data-hover-text="Контакты"><a href="./pages/">Контакты</a></li>
-                    </ul>
-                </nav>
-                <a class="header__tel" href="tel:+78465553535" data-hover-text="Заказать звонок">8 (846) 555-35-35</a>
+				<nav class="header__nav">
+					<ul class="header__nav-container">
+						<li class="header__nav-item" data-hover-text="О компании"><a href="./pages/">о Компании</a></li>
+						<li class="header__nav-item header__nav-item--menu" data-hover-text="Услуги"><button data-services-open>Услуги</button><i class="header__nav-item--icon icon-check-mark"></i></li>
+						<li class="header__nav-item" data-hover-text="Новости"><a href="./pages/">Новости</a></li>
+						<li class="header__nav-item" data-hover-text="Кейсы"><a href="./pages/">Кейсы</a></li>
+						<li class="header__nav-item" data-hover-text="Контакты"><a href="./pages/">Контакты</a></li>
+					</ul>
+				</nav>
+				<a class="header__tel" href="tel:+78465553535" data-hover-text="Заказать звонок">8 (846) 555-35-35</a>
 			</div>
 		</header>
-        <main>
-            <section class="intro">
-                <div class="intro__container">
-                    <div class="intro__title-container">
-                        <div class="intro__titlebox">
-                            <h1 class="intro__title">Талан</h1>
-                            <h2 class="intro__subtitle">Юридическая компания</h2>
-                        </div>
-                    </div>
-                    <div class="intro__contentbox">
-                        <div class="intro__slogan">
-                            <h3 class="intro__slogan-title">Поддержка бизнеса<br>начинается здесь</h3>
-                            <ul class="intro__slogan-subtitle">
-                                <li class="intro__slogan-item">Ваше законное право</li>
-                                <li class="intro__slogan-item--icon icon-arrow-long"></li>
-                                <li class="intro__slogan-item">Наша забота</li>
-                            </ul>
-                            <button class="intro__slogan-button" data-form-open>Получить консультацию<i class="intro__slogan-button--icon icon-arrow"></i></button>
-                        </div>
-                        <div class="intro__videobox">
-                            <a class="intro__video-wrapper" href="#">
-                                <video class="intro__video" muted autoplay loop>
-                                    <source src="media/content/video/confused-travolta.mp4" type="video/mp4">
-                                </video>
-                                <p class="intro__video-desc"><i class="icon-play"></i>Как мы помогаем клиентам</p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="intro__fog">
-                    <div class="intro__fog-layer intro__fog-layer--1"></div>
-                    <div class="intro__fog-layer intro__fog-layer--2"></div>
-                    <div class="intro__fog-layer intro__fog-layer--3"></div>
-                    <div class="intro__fog-layer intro__fog-layer--4"></div>
-                </div>
-            </section>
-            <section class="about">
-                <div class="about__container">
-                    <div class="about__titlebox">
-                        <h2 class="about__tag">Философия компании</h2>
-                        <h3 class="about__title">10 лет опыта позволяют нам минимизировать ваши риски и сэкономить время</h3>
-                    </div>
-                    <div class="about__body">
-                        <p class="about__text">
-                            В компании «ТАЛАН» мы помогаем бизнесу решать юридические и&nbsp;налоговые проблемы, которые отвлекают от роста компании. Предоставляем комплексное сопровождение — от оформления документов до полного правового консалтинга, берём на себя ответственность и решаем вопросы «под ключ». Мы знаем, как юридические и налоговые вопросы тормозят развитие бизнеса. 
-                            <br>
-                            Мы берём на себя оформление документов, защиту интересов и комплексное сопровождение, чтобы вы могли сосредоточиться на росте.
-                        </p>
-                        <ul class="about__values">
-                            <li class="about__values-item"><span class="about__values-number">2000+</span><p class="about__values-text">Количество успешных дел</p></li>
-                            <li class="about__values-item"><span class="about__values-number">34%</span><p class="about__values-text">Оптимизация налоговых расходов</p></li>
-                            <li class="about__values-item"><span class="about__values-number">48ч</span><p class="about__values-text">Время подготовки документов</p></li>
-                            <li class="about__values-item"><span class="about__values-number">100%</span><p class="about__values-text">Процент положительных отзывов</p></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section class="staff">
-                <div class="staff__container">
-                    <picture class="staff__image-wrapper">
-                        <img class="staff__image" src="./media/content/img/staff/director.jpg" alt="#">
-                    </picture>
-                    <div class="staff__body">
-                        <div class="staff__titlebox">
-                            <div class="staff__title-container">
-                                <h2 class="staff__tag">Мария Талан</h2>
-                                <span class="staff__tag-desc">директор Компании и&nbsp;арбитражный управляющий</span>
-                                <h3 class="staff__title">Каждый юридический документ — залог вашего успеха. Мы не&nbsp;просто решаем проблемы —мы создаём фундамент для&nbsp;уверенного будущего вашего бизнеса</h3>
-                            </div>
-                        </div>
-                        <div class="staff__content">
-                            <p class="staff__text">С деликатной точностью в каждой детали, арбитражный управляющий контролирует каждый процесс в вашем деле. Её компетенции и опыт исходят из глубокого понимания законодательства, что позволяет находить оптимальные решения даже в самых сложных ситуациях.</p>
-                            <a class="staff__button" href="./pages/">Подробнее о компании <i class="staff__button--icon icon-arrow"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="staff__fog">
-                    <div class="staff__fog-layer staff__fog-layer--1"></div>
-                    <div class="staff__fog-layer staff__fog-layer--2"></div>
-                </div>
-            </section>
-        </main>
+		<main>
+			<section class="intro">
+				<div class="intro__container">
+					<div class="intro__title-container">
+						<div class="intro__titlebox">
+							<h1 class="intro__title">Талан</h1>
+							<h2 class="intro__subtitle">Юридическая компания</h2>
+						</div>
+					</div>
+					<div class="intro__contentbox">
+						<div class="intro__slogan">
+							<h3 class="intro__slogan-title">Поддержка бизнеса<br />начинается здесь</h3>
+							<ul class="intro__slogan-subtitle">
+								<li class="intro__slogan-item">Ваше законное право</li>
+								<li class="intro__slogan-item--icon icon-arrow-long"></li>
+								<li class="intro__slogan-item">Наша забота</li>
+							</ul>
+							<button class="intro__slogan-button" data-form-open>Получить консультацию<i class="intro__slogan-button--icon icon-arrow"></i></button>
+						</div>
+						<div class="intro__videobox">
+							<a class="intro__video-wrapper" href="#">
+								<video class="intro__video" muted autoplay loop>
+									<source src="media/content/video/confused-travolta.mp4" type="video/mp4" />
+								</video>
+								<p class="intro__video-desc"><i class="icon-play"></i>Как мы помогаем клиентам</p>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="intro__fog">
+					<div class="intro__fog-layer intro__fog-layer--1"></div>
+					<div class="intro__fog-layer intro__fog-layer--2"></div>
+					<div class="intro__fog-layer intro__fog-layer--3"></div>
+					<div class="intro__fog-layer intro__fog-layer--4"></div>
+				</div>
+			</section>
+			<section class="about">
+				<div class="about__container">
+					<div class="about__titlebox">
+						<h2 class="about__tag">Философия компании</h2>
+						<h3 class="about__title">10 лет опыта позволяют нам минимизировать ваши риски и сэкономить время</h3>
+					</div>
+					<div class="about__body">
+						<p class="about__text">
+							В компании «ТАЛАН» мы помогаем бизнесу решать юридические и&nbsp;налоговые проблемы, которые отвлекают от роста компании. Предоставляем комплексное сопровождение — от оформления документов до полного правового консалтинга, берём на себя ответственность и решаем вопросы «под ключ». Мы знаем, как юридические и налоговые вопросы тормозят развитие бизнеса.
+							<br />
+							Мы берём на себя оформление документов, защиту интересов и комплексное сопровождение, чтобы вы могли сосредоточиться на росте.
+						</p>
+						<ul class="about__values">
+							<li class="about__values-item">
+								<span class="about__values-number">2000+</span>
+								<p class="about__values-text">Количество успешных дел</p>
+							</li>
+							<li class="about__values-item">
+								<span class="about__values-number">34%</span>
+								<p class="about__values-text">Оптимизация налоговых расходов</p>
+							</li>
+							<li class="about__values-item">
+								<span class="about__values-number">48ч</span>
+								<p class="about__values-text">Время подготовки документов</p>
+							</li>
+							<li class="about__values-item">
+								<span class="about__values-number">100%</span>
+								<p class="about__values-text">Процент положительных отзывов</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section class="staff">
+				<div class="staff__container">
+					<picture class="staff__image-wrapper">
+						<img class="staff__image" src="./media/content/img/staff/director.jpg" alt="#" />
+					</picture>
+					<div class="staff__body">
+						<div class="staff__titlebox">
+							<div class="staff__title-container">
+								<h2 class="staff__tag">Мария Талан</h2>
+								<span class="staff__tag-desc">директор Компании и&nbsp;арбитражный управляющий</span>
+								<h3 class="staff__title">Каждый юридический документ — залог вашего успеха. Мы не&nbsp;просто решаем проблемы —мы создаём фундамент для&nbsp;уверенного будущего вашего бизнеса</h3>
+							</div>
+						</div>
+						<div class="staff__content">
+							<p class="staff__text">С деликатной точностью в каждой детали, арбитражный управляющий контролирует каждый процесс в вашем деле. Её компетенции и опыт исходят из глубокого понимания законодательства, что позволяет находить оптимальные решения даже в самых сложных ситуациях.</p>
+							<a class="staff__button" href="./pages/">Подробнее о компании <i class="staff__button--icon icon-arrow"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="staff__fog">
+					<div class="staff__fog-layer staff__fog-layer--1"></div>
+					<div class="staff__fog-layer staff__fog-layer--2"></div>
+				</div>
+			</section>
+			<section class="services">
+				<div class="services__container">
+					<div class="services__titlebox">
+						<h2 class="services__tag">Услуги</h2>
+						<h3 class="services__title">Мы оказываем высококвалифицированные услуги в&nbsp;наиболее проблемных областях права</h3>
+						<ul class="services__switcher">
+							<li class="services__switcher-indicator"></li>
+							<li class="services__switcher-item active" data-type="juridical">Юридические лица</li>
+							<li class="services__switcher-item" data-type="physical">Физические лица</li>
+						</ul>
+					</div>
+					<div class="services__body">
+						<ul class="services__list" data-type="juridical">
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Административное право</h4>
+									<p class="services__desc">Рассмотрение дел о нарушениях административного законодательства, в том числе штрафных дел, лицензировании и деятельности государственных органов</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="srvices__image" src="./media/content/img/services/service.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Антимономольное право</h4>
+									<p class="services__desc">Направлено на предотвращение недобросовестной конкуренции, монополизации рынков, защиту прав потребителей и обеспечение свободы предпринимательства</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="srvices__image" src="./media/content/img/services/service1.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Корпоративное право</h4>
+									<p class="services__desc">Регулирует отношения между участниками (акционерами, участниками) коммерческих организаций, вопросы управления, распределения прибыли и другие аспекты деятельности корпораций</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="srvices__image" src="./media/content/img/services/service2.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Налоговое право</h4>
+									<p class="services__desc">Разрешение споров между налогоплательщиками и налоговыми органами, связанных с уплатой налогов, налоговыми проверками и налоговыми вычетами</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="srvices__image" src="./media/content/img/services/service3.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Трудовое право</h4>
+									<p class="services__desc">Разрешение конфликтов между работодателями и работниками, связанных с трудовыми отношениями, заработной платой, увольнением и дискриминацией</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="srvices__image" src="./media/content/img/services/service4.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Интеллектуальная собственность</h4>
+									<p class="services__desc">Включает в себя защиту авторских прав, патентов, товарных знаков, коммерческих секретов и других объектов интеллектуальной собственности</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="srvices__image" src="./media/content/img/services/service5.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</main>
 	</body>
 </html>
