--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 									<p class="services__desc">Рассмотрение дел о нарушениях административного законодательства, в том числе штрафных дел, лицензировании и деятельности государственных органов</p>
 									<div class="services__imagebox">
 										<picture class="services__image-wrapper">
-											<img class="srvices__image" src="./media/content/img/services/service.jpg" alt="#" />
+											<img class="services__image" src="./media/content/img/services/service.jpg" alt="#" />
 										</picture>
 									</div>
 									<div class="services__icon-wrapper">
@@ -158,7 +158,7 @@
 									<p class="services__desc">Направлено на предотвращение недобросовестной конкуренции, монополизации рынков, защиту прав потребителей и обеспечение свободы предпринимательства</p>
 									<div class="services__imagebox">
 										<picture class="services__image-wrapper">
-											<img class="srvices__image" src="./media/content/img/services/service1.jpg" alt="#" />
+											<img class="services__image" src="./media/content/img/services/service1.jpg" alt="#" />
 										</picture>
 									</div>
 									<div class="services__icon-wrapper">
@@ -173,7 +173,7 @@
 									<p class="services__desc">Регулирует отношения между участниками (акционерами, участниками) коммерческих организаций, вопросы управления, распределения прибыли и другие аспекты деятельности корпораций</p>
 									<div class="services__imagebox">
 										<picture class="services__image-wrapper">
-											<img class="srvices__image" src="./media/content/img/services/service2.jpg" alt="#" />
+											<img class="services__image" src="./media/content/img/services/service2.jpg" alt="#" />
 										</picture>
 									</div>
 									<div class="services__icon-wrapper">
@@ -188,7 +188,7 @@
 									<p class="services__desc">Разрешение споров между налогоплательщиками и налоговыми органами, связанных с уплатой налогов, налоговыми проверками и налоговыми вычетами</p>
 									<div class="services__imagebox">
 										<picture class="services__image-wrapper">
-											<img class="srvices__image" src="./media/content/img/services/service3.jpg" alt="#" />
+											<img class="services__image" src="./media/content/img/services/service3.jpg" alt="#" />
 										</picture>
 									</div>
 									<div class="services__icon-wrapper">
@@ -203,7 +203,7 @@
 									<p class="services__desc">Разрешение конфликтов между работодателями и работниками, связанных с трудовыми отношениями, заработной платой, увольнением и дискриминацией</p>
 									<div class="services__imagebox">
 										<picture class="services__image-wrapper">
-											<img class="srvices__image" src="./media/content/img/services/service4.jpg" alt="#" />
+											<img class="services__image" src="./media/content/img/services/service4.jpg" alt="#" />
 										</picture>
 									</div>
 									<div class="services__icon-wrapper">
@@ -218,7 +218,7 @@
 									<p class="services__desc">Включает в себя защиту авторских прав, патентов, товарных знаков, коммерческих секретов и других объектов интеллектуальной собственности</p>
 									<div class="services__imagebox">
 										<picture class="services__image-wrapper">
-											<img class="srvices__image" src="./media/content/img/services/service5.jpg" alt="#" />
+											<img class="services__image" src="./media/content/img/services/service5.jpg" alt="#" />
 										</picture>
 									</div>
 									<div class="services__icon-wrapper">
