--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
 		<main>
 			<section class="intro">
 				<div class="intro__container">
-					<div class="intro__title-container">
-						<div class="intro__titlebox">
-							<h1 class="intro__title">Талан</h1>
-							<h2 class="intro__subtitle">Юридическая компания</h2>
-						</div>
+					<div class="intro__titlebox">
+						<h1 class="intro__title">Талан</h1>
+						<h2 class="intro__subtitle">Юридическая компания</h2>
 					</div>
 					<div class="intro__contentbox">
 						<div class="intro__slogan">
@@ -129,9 +127,9 @@
 						<h2 class="services__tag">Услуги</h2>
 						<h3 class="services__title">Мы оказываем высококвалифицированные услуги в&nbsp;наиболее проблемных областях права</h3>
 						<ul class="services__switcher">
-							<li class="services__switcher-indicator"></li>
 							<li class="services__switcher-item active" data-type="juridical">Юридические лица</li>
 							<li class="services__switcher-item" data-type="physical">Физические лица</li>
+							<li class="services__switcher-indicator"></li>
 						</ul>
 					</div>
 					<div class="services__body">
@@ -227,9 +225,129 @@
 								</a>
 							</li>
 						</ul>
+						<ul class="services__list" data-type="physical">
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Конституционное (государственное) право</h4>
+									<p class="services__desc">Рассмотрение дел о нарушениях административного законодательства, в том числе штрафных дел, лицензировании и деятельности государственных органов</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="services__image" src="./media/content/img/services/service.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Гражданское право</h4>
+									<p class="services__desc">Направлено на предотвращение недобросовестной конкуренции, монополизации рынков, защиту прав потребителей и обеспечение свободы предпринимательства</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="services__image" src="./media/content/img/services/service1.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Уголовное право</h4>
+									<p class="services__desc">Регулирует отношения между участниками (акционерами, участниками) коммерческих организаций, вопросы управления, распределения прибыли и другие аспекты деятельности корпораций</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="services__image" src="./media/content/img/services/service2.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Налоговое право</h4>
+									<p class="services__desc">Разрешение споров между налогоплательщиками и налоговыми органами, связанных с уплатой налогов, налоговыми проверками и налоговыми вычетами</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="services__image" src="./media/content/img/services/service3.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Трудовое право</h4>
+									<p class="services__desc">Разрешение конфликтов между работодателями и работниками, связанных с трудовыми отношениями, заработной платой, увольнением и дискриминацией</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="services__image" src="./media/content/img/services/service4.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a class="services__item" href="./pages/">
+									<div class="services__number"></div>
+									<h4 class="services__name">Интеллектуальная собственность</h4>
+									<p class="services__desc">Включает в себя защиту авторских прав, патентов, товарных знаков, коммерческих секретов и других объектов интеллектуальной собственности</p>
+									<div class="services__imagebox">
+										<picture class="services__image-wrapper">
+											<img class="services__image" src="./media/content/img/services/service5.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="services__icon-wrapper">
+										<i class="services__icon icon-arrow"></i>
+									</div>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section class="steps">
+				<div class="steps__container">
+					<h2 class="steps__title">Этапы<br />сотрудничества</h2>
+					<div class="steps__list">
+						<ul class="steps__item">
+							<li class="steps__item-number"></li>
+							<li class="steps__item-title">Консультация и анализ</li>
+							<li class="steps__item-text">Мы начинаем с тщательного аудита текущей ситуации компании, выявляя юридические риски и потребности в налоговом консультировании, работе с персоналом и подготовке к гос. проверкам.</li>
+						</ul>
+						<ul class="steps__item">
+							<li class="steps__item-number"></li>
+							<li class="steps__item-title">Разработка стратегии</li>
+							<li class="steps__item-text">На основе анализа формируем индивидуальный план – выбираем между полным правовым сопровождением и разовыми услугами, адаптированными к особенностям вашего бизнеса.</li>
+						</ul>
+						<ul class="steps__item">
+							<li class="steps__item-number"></li>
+							<li class="steps__item-title">Оформление документов</li>
+							<li class="steps__item-text">Подготавливаем необходимые документы и обеспечиваем представление интересов компании в переговорах с госорганами и налоговыми проверках.</li>
+						</ul>
+						<ul class="steps__item">
+							<li class="steps__item-number"></li>
+							<li class="steps__item-title">Сопровождение и поддержка</li>
+							<li class="steps__item-text">Оказываем постоянную юридическую поддержку, отслеживаем изменения в законодательстве и оперативно реагируем на новые вызовы, минимизируя риски.</li>
+						</ul>
 					</div>
 				</div>
 			</section>
 		</main>
+		<script src="./js/pages/index/servicesSwitcher.js"></script>
 	</body>
 </html>
